[package]
name = "component-random"
description = "Random number, string, and UUID generation"
version = "0.1.0"
edition = "2024"

[dependencies]
act-sdk = "0.3"
wit-bindgen = { version = "0.56", features = ["async-spawn"] }
uuid = { version = "1", features = ["v4", "v7"] }
rand = "0.9"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
opt-level = "z"

[lib]
crate-type = ["cdylib"]
