[package]
name = "component-random"
description = "Random number, string, and UUID generation"
version = "0.2.2"
edition = "2024"

[dependencies]
act-sdk = "0.13"
wit-bindgen = { version = "0.58", features = ["async-spawn"] }
uuid = { version = "1", features = ["v4", "v7"] }
rand = "0.10"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
opt-level = "z"
panic = "abort"

[lib]
crate-type = ["cdylib"]
